Compilador-Isidrol/ProjetoCompiladores/.antlr/IsicompParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from c:\Users\ramon\Desktop\Projeto Compiladores\AnalisadorLexico\Compilador-Isidrol\ProjetoCompiladores\Isicomp.g4 by ANTLR 4.7.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.1")]
[System.CLSCompliant(false)]
public partial class IsicompParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, FORMAT=11, ID=12, OPER_TER=13, OPER_FAT=14, PONTUACAO=15, NUM=16, 
		OPE_RELAC=17, DIGIT=18, LETTER=19, T_NULL=20, T_STRING=21, T_CHAR=22, 
		T_BYTE=23, T_INT=24, T_FLOAT=25, T_DOUBLE=26, T_SOMA=27, T_SUBT=28, T_DIV=29, 
		T_MULT=30, T_MAIOR=31, T_MENOR=32, T_IGUAL=33, T_COMMA=34, T_APARENT=35, 
		T_FPARENT=36, T_ASPAS=37, T_DOT=38, T_UNDERS=39, T_ACHAVE=40, T_FCHAVE=41, 
		T_MAIOR_IGUAL=42, T_MENOR_IGUAL=43, T_IGUAL_RELAC=44, T_DIF=45, WS=46;
	public const int
		RULE_programa = 0, RULE_declare = 1, RULE_blococomando = 2, RULE_comando = 3, 
		RULE_exp_ter = 4, RULE_exp_fat = 5, RULE_exp_relacional = 6, RULE_termo = 7, 
		RULE_se = 8, RULE_atribua = 9, RULE_escreva = 10, RULE_leia = 11, RULE_enquanto = 12, 
		RULE_faca = 13, RULE_string = 14;
	public static readonly string[] ruleNames = {
		"programa", "declare", "blococomando", "comando", "exp_ter", "exp_fat", 
		"exp_relacional", "termo", "se", "atribua", "escreva", "leia", "enquanto", 
		"faca", "string"
	};

	private static readonly string[] _LiteralNames = {
		null, "'programa'", "'fimprog'", "'declare'", "'se'", "'entao'", "'senao'", 
		"'escreva'", "'leia'", "'enquanto'", "'faca'", null, null, null, null, 
		null, null, null, null, null, "'nulo'", "'string'", "'char'", "'byte'", 
		"'int'", "'float'", "'double'", "'+'", "'-'", "'/'", "'*'", "'>'", "'<'", 
		"':='", "','", "'('", "')'", "'\"'", "'.'", "'_'", "'{'", "'}'", "'>='", 
		"'<='", "'=='", "'!='"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, "FORMAT", 
		"ID", "OPER_TER", "OPER_FAT", "PONTUACAO", "NUM", "OPE_RELAC", "DIGIT", 
		"LETTER", "T_NULL", "T_STRING", "T_CHAR", "T_BYTE", "T_INT", "T_FLOAT", 
		"T_DOUBLE", "T_SOMA", "T_SUBT", "T_DIV", "T_MULT", "T_MAIOR", "T_MENOR", 
		"T_IGUAL", "T_COMMA", "T_APARENT", "T_FPARENT", "T_ASPAS", "T_DOT", "T_UNDERS", 
		"T_ACHAVE", "T_FCHAVE", "T_MAIOR_IGUAL", "T_MENOR_IGUAL", "T_IGUAL_RELAC", 
		"T_DIF", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Isicomp.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static IsicompParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public IsicompParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public IsicompParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class ProgramaContext : ParserRuleContext {
		public DeclareContext declare() {
			return GetRuleContext<DeclareContext>(0);
		}
		public BlococomandoContext blococomando() {
			return GetRuleContext<BlococomandoContext>(0);
		}
		public ITerminalNode T_DOT() { return GetToken(IsicompParser.T_DOT, 0); }
		public ProgramaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_programa; } }
	}

	[RuleVersion(0)]
	public ProgramaContext programa() {
		ProgramaContext _localctx = new ProgramaContext(Context, State);
		EnterRule(_localctx, 0, RULE_programa);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 30; Match(T__0);
			State = 31; declare();
			State = 32; blococomando();
			State = 33; Match(T__1);
			State = 34; Match(T_DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclareContext : ParserRuleContext {
		public ITerminalNode[] ID() { return GetTokens(IsicompParser.ID); }
		public ITerminalNode ID(int i) {
			return GetToken(IsicompParser.ID, i);
		}
		public ITerminalNode T_DOT() { return GetToken(IsicompParser.T_DOT, 0); }
		public ITerminalNode[] T_COMMA() { return GetTokens(IsicompParser.T_COMMA); }
		public ITerminalNode T_COMMA(int i) {
			return GetToken(IsicompParser.T_COMMA, i);
		}
		public DeclareContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declare; } }
	}

	[RuleVersion(0)]
	public DeclareContext declare() {
		DeclareContext _localctx = new DeclareContext(Context, State);
		EnterRule(_localctx, 2, RULE_declare);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 36; Match(T__2);
			State = 37; Match(ID);
			State = 42;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T_COMMA) {
				{
				{
				State = 38; Match(T_COMMA);
				State = 39; Match(ID);
				}
				}
				State = 44;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 45; Match(T_DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlococomandoContext : ParserRuleContext {
		public ComandoContext[] comando() {
			return GetRuleContexts<ComandoContext>();
		}
		public ComandoContext comando(int i) {
			return GetRuleContext<ComandoContext>(i);
		}
		public BlococomandoContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_blococomando; } }
	}

	[RuleVersion(0)]
	public BlococomandoContext blococomando() {
		BlococomandoContext _localctx = new BlococomandoContext(Context, State);
		EnterRule(_localctx, 4, RULE_blococomando);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 48;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 47; comando();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 50;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ComandoContext : ParserRuleContext {
		public LeiaContext leia() {
			return GetRuleContext<LeiaContext>(0);
		}
		public EscrevaContext escreva() {
			return GetRuleContext<EscrevaContext>(0);
		}
		public AtribuaContext atribua() {
			return GetRuleContext<AtribuaContext>(0);
		}
		public SeContext se() {
			return GetRuleContext<SeContext>(0);
		}
		public EnquantoContext enquanto() {
			return GetRuleContext<EnquantoContext>(0);
		}
		public FacaContext faca() {
			return GetRuleContext<FacaContext>(0);
		}
		public ComandoContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_comando; } }
	}

	[RuleVersion(0)]
	public ComandoContext comando() {
		ComandoContext _localctx = new ComandoContext(Context, State);
		EnterRule(_localctx, 6, RULE_comando);
		try {
			State = 58;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__7:
				EnterOuterAlt(_localctx, 1);
				{
				State = 52; leia();
				}
				break;
			case T__6:
				EnterOuterAlt(_localctx, 2);
				{
				State = 53; escreva();
				}
				break;
			case ID:
				EnterOuterAlt(_localctx, 3);
				{
				State = 54; atribua();
				}
				break;
			case T__3:
				EnterOuterAlt(_localctx, 4);
				{
				State = 55; se();
				}
				break;
			case T__8:
				EnterOuterAlt(_localctx, 5);
				{
				State = 56; enquanto();
				}
				break;
			case T__9:
				EnterOuterAlt(_localctx, 6);
				{
				State = 57; faca();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Exp_terContext : ParserRuleContext {
		public Exp_fatContext[] exp_fat() {
			return GetRuleContexts<Exp_fatContext>();
		}
		public Exp_fatContext exp_fat(int i) {
			return GetRuleContext<Exp_fatContext>(i);
		}
		public ITerminalNode[] OPER_TER() { return GetTokens(IsicompParser.OPER_TER); }
		public ITerminalNode OPER_TER(int i) {
			return GetToken(IsicompParser.OPER_TER, i);
		}
		public Exp_terContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_exp_ter; } }
	}

	[RuleVersion(0)]
	public Exp_terContext exp_ter() {
		Exp_terContext _localctx = new Exp_terContext(Context, State);
		EnterRule(_localctx, 8, RULE_exp_ter);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 60; exp_fat();
			State = 65;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==OPER_TER) {
				{
				{
				State = 61; Match(OPER_TER);
				State = 62; exp_fat();
				}
				}
				State = 67;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Exp_fatContext : ParserRuleContext {
		public ITerminalNode NUM() { return GetToken(IsicompParser.NUM, 0); }
		public ITerminalNode[] OPER_FAT() { return GetTokens(IsicompParser.OPER_FAT); }
		public ITerminalNode OPER_FAT(int i) {
			return GetToken(IsicompParser.OPER_FAT, i);
		}
		public TermoContext[] termo() {
			return GetRuleContexts<TermoContext>();
		}
		public TermoContext termo(int i) {
			return GetRuleContext<TermoContext>(i);
		}
		public Exp_fatContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_exp_fat; } }
	}

	[RuleVersion(0)]
	public Exp_fatContext exp_fat() {
		Exp_fatContext _localctx = new Exp_fatContext(Context, State);
		EnterRule(_localctx, 10, RULE_exp_fat);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 68; Match(NUM);
			State = 73;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==OPER_FAT) {
				{
				{
				State = 69; Match(OPER_FAT);
				State = 70; termo();
				}
				}
				State = 75;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Exp_relacionalContext : ParserRuleContext {
		public ITerminalNode OPE_RELAC() { return GetToken(IsicompParser.OPE_RELAC, 0); }
		public ITerminalNode[] ID() { return GetTokens(IsicompParser.ID); }
		public ITerminalNode ID(int i) {
			return GetToken(IsicompParser.ID, i);
		}
		public ITerminalNode[] NUM() { return GetTokens(IsicompParser.NUM); }
		public ITerminalNode NUM(int i) {
			return GetToken(IsicompParser.NUM, i);
		}
		public Exp_relacionalContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_exp_relacional; } }
	}

	[RuleVersion(0)]
	public Exp_relacionalContext exp_relacional() {
		Exp_relacionalContext _localctx = new Exp_relacionalContext(Context, State);
		EnterRule(_localctx, 12, RULE_exp_relacional);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 76;
			_la = TokenStream.LA(1);
			if ( !(_la==ID || _la==NUM) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 77; Match(OPE_RELAC);
			State = 78;
			_la = TokenStream.LA(1);
			if ( !(_la==ID || _la==NUM) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TermoContext : ParserRuleContext {
		public ITerminalNode NUM() { return GetToken(IsicompParser.NUM, 0); }
		public ITerminalNode ID() { return GetToken(IsicompParser.ID, 0); }
		public ITerminalNode T_APARENT() { return GetToken(IsicompParser.T_APARENT, 0); }
		public Exp_terContext exp_ter() {
			return GetRuleContext<Exp_terContext>(0);
		}
		public ITerminalNode T_FPARENT() { return GetToken(IsicompParser.T_FPARENT, 0); }
		public TermoContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_termo; } }
	}

	[RuleVersion(0)]
	public TermoContext termo() {
		TermoContext _localctx = new TermoContext(Context, State);
		EnterRule(_localctx, 14, RULE_termo);
		try {
			State = 86;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case NUM:
				EnterOuterAlt(_localctx, 1);
				{
				State = 80; Match(NUM);
				}
				break;
			case ID:
				EnterOuterAlt(_localctx, 2);
				{
				State = 81; Match(ID);
				}
				break;
			case T_APARENT:
				EnterOuterAlt(_localctx, 3);
				{
				State = 82; Match(T_APARENT);
				State = 83; exp_ter();
				State = 84; Match(T_FPARENT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SeContext : ParserRuleContext {
		public ITerminalNode T_APARENT() { return GetToken(IsicompParser.T_APARENT, 0); }
		public Exp_relacionalContext exp_relacional() {
			return GetRuleContext<Exp_relacionalContext>(0);
		}
		public ITerminalNode T_FPARENT() { return GetToken(IsicompParser.T_FPARENT, 0); }
		public BlococomandoContext[] blococomando() {
			return GetRuleContexts<BlococomandoContext>();
		}
		public BlococomandoContext blococomando(int i) {
			return GetRuleContext<BlococomandoContext>(i);
		}
		public SeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_se; } }
	}

	[RuleVersion(0)]
	public SeContext se() {
		SeContext _localctx = new SeContext(Context, State);
		EnterRule(_localctx, 16, RULE_se);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 88; Match(T__3);
			State = 89; Match(T_APARENT);
			State = 90; exp_relacional();
			State = 91; Match(T_FPARENT);
			State = 92; Match(T__4);
			State = 93; blococomando();
			State = 97;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
			case 1:
				{
				State = 94; Match(T__5);
				State = 95; Match(T__4);
				State = 96; blococomando();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AtribuaContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(IsicompParser.ID, 0); }
		public ITerminalNode T_IGUAL() { return GetToken(IsicompParser.T_IGUAL, 0); }
		public Exp_terContext exp_ter() {
			return GetRuleContext<Exp_terContext>(0);
		}
		public ITerminalNode T_DOT() { return GetToken(IsicompParser.T_DOT, 0); }
		public AtribuaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_atribua; } }
	}

	[RuleVersion(0)]
	public AtribuaContext atribua() {
		AtribuaContext _localctx = new AtribuaContext(Context, State);
		EnterRule(_localctx, 18, RULE_atribua);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 99; Match(ID);
			State = 100; Match(T_IGUAL);
			State = 101; exp_ter();
			State = 102; Match(T_DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EscrevaContext : ParserRuleContext {
		public ITerminalNode T_APARENT() { return GetToken(IsicompParser.T_APARENT, 0); }
		public ITerminalNode T_FPARENT() { return GetToken(IsicompParser.T_FPARENT, 0); }
		public ITerminalNode T_DOT() { return GetToken(IsicompParser.T_DOT, 0); }
		public ITerminalNode ID() { return GetToken(IsicompParser.ID, 0); }
		public StringContext @string() {
			return GetRuleContext<StringContext>(0);
		}
		public EscrevaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_escreva; } }
	}

	[RuleVersion(0)]
	public EscrevaContext escreva() {
		EscrevaContext _localctx = new EscrevaContext(Context, State);
		EnterRule(_localctx, 20, RULE_escreva);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 104; Match(T__6);
			State = 105; Match(T_APARENT);
			State = 108;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case ID:
				{
				State = 106; Match(ID);
				}
				break;
			case T_ASPAS:
				{
				State = 107; @string();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 110; Match(T_FPARENT);
			State = 111; Match(T_DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LeiaContext : ParserRuleContext {
		public ITerminalNode T_APARENT() { return GetToken(IsicompParser.T_APARENT, 0); }
		public ITerminalNode ID() { return GetToken(IsicompParser.ID, 0); }
		public ITerminalNode T_FPARENT() { return GetToken(IsicompParser.T_FPARENT, 0); }
		public ITerminalNode T_DOT() { return GetToken(IsicompParser.T_DOT, 0); }
		public LeiaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_leia; } }
	}

	[RuleVersion(0)]
	public LeiaContext leia() {
		LeiaContext _localctx = new LeiaContext(Context, State);
		EnterRule(_localctx, 22, RULE_leia);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 113; Match(T__7);
			State = 114; Match(T_APARENT);
			State = 115; Match(ID);
			State = 116; Match(T_FPARENT);
			State = 117; Match(T_DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EnquantoContext : ParserRuleContext {
		public ITerminalNode T_APARENT() { return GetToken(IsicompParser.T_APARENT, 0); }
		public Exp_relacionalContext exp_relacional() {
			return GetRuleContext<Exp_relacionalContext>(0);
		}
		public ITerminalNode T_FPARENT() { return GetToken(IsicompParser.T_FPARENT, 0); }
		public ITerminalNode T_ACHAVE() { return GetToken(IsicompParser.T_ACHAVE, 0); }
		public BlococomandoContext blococomando() {
			return GetRuleContext<BlococomandoContext>(0);
		}
		public ITerminalNode T_FCHAVE() { return GetToken(IsicompParser.T_FCHAVE, 0); }
		public EnquantoContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_enquanto; } }
	}

	[RuleVersion(0)]
	public EnquantoContext enquanto() {
		EnquantoContext _localctx = new EnquantoContext(Context, State);
		EnterRule(_localctx, 24, RULE_enquanto);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 119; Match(T__8);
			State = 120; Match(T_APARENT);
			State = 121; exp_relacional();
			State = 122; Match(T_FPARENT);
			State = 123; Match(T_ACHAVE);
			State = 124; blococomando();
			State = 125; Match(T_FCHAVE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FacaContext : ParserRuleContext {
		public ITerminalNode T_ACHAVE() { return GetToken(IsicompParser.T_ACHAVE, 0); }
		public BlococomandoContext blococomando() {
			return GetRuleContext<BlococomandoContext>(0);
		}
		public ITerminalNode T_FCHAVE() { return GetToken(IsicompParser.T_FCHAVE, 0); }
		public ITerminalNode T_APARENT() { return GetToken(IsicompParser.T_APARENT, 0); }
		public Exp_relacionalContext exp_relacional() {
			return GetRuleContext<Exp_relacionalContext>(0);
		}
		public ITerminalNode T_FPARENT() { return GetToken(IsicompParser.T_FPARENT, 0); }
		public ITerminalNode T_DOT() { return GetToken(IsicompParser.T_DOT, 0); }
		public FacaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_faca; } }
	}

	[RuleVersion(0)]
	public FacaContext faca() {
		FacaContext _localctx = new FacaContext(Context, State);
		EnterRule(_localctx, 26, RULE_faca);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 127; Match(T__9);
			State = 128; Match(T_ACHAVE);
			State = 129; blococomando();
			State = 130; Match(T_FCHAVE);
			State = 131; Match(T__8);
			State = 132; Match(T_APARENT);
			State = 133; exp_relacional();
			State = 134; Match(T_FPARENT);
			State = 135; Match(T_DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StringContext : ParserRuleContext {
		public ITerminalNode[] T_ASPAS() { return GetTokens(IsicompParser.T_ASPAS); }
		public ITerminalNode T_ASPAS(int i) {
			return GetToken(IsicompParser.T_ASPAS, i);
		}
		public ITerminalNode[] LETTER() { return GetTokens(IsicompParser.LETTER); }
		public ITerminalNode LETTER(int i) {
			return GetToken(IsicompParser.LETTER, i);
		}
		public ITerminalNode[] NUM() { return GetTokens(IsicompParser.NUM); }
		public ITerminalNode NUM(int i) {
			return GetToken(IsicompParser.NUM, i);
		}
		public ITerminalNode[] WS() { return GetTokens(IsicompParser.WS); }
		public ITerminalNode WS(int i) {
			return GetToken(IsicompParser.WS, i);
		}
		public StringContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_string; } }
	}

	[RuleVersion(0)]
	public StringContext @string() {
		StringContext _localctx = new StringContext(Context, State);
		EnterRule(_localctx, 28, RULE_string);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 137; Match(T_ASPAS);
			State = 139;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 138;
				_la = TokenStream.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NUM) | (1L << LETTER) | (1L << WS))) != 0)) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				}
				}
				State = 141;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NUM) | (1L << LETTER) | (1L << WS))) != 0) );
			State = 143; Match(T_ASPAS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}


	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN);


}
